// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages register should render correctly 1`] = `
<Component
  description="Register page of the Create Fares Data Service"
  errors={Array []}
  title="Register - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <CsrfForm
        action="/api/register"
        csrfToken=""
        method="post"
      >
        <ErrorSummary
          errors={Array []}
        />
        <div
          className="govuk-form-group "
        >
          <fieldset
            aria-describedby="register-page-heading"
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend govuk-fieldset__legend--l"
            >
              <h1
                className="govuk-fieldset__heading"
                id="register-page-heading"
              >
                Create an account
              </h1>
            </legend>
            <p
              className="govuk-hint hint-text"
            >
              Enter your details to create an account
            </p>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="email"
                id="email-label"
              >
                Enter email address
              </label>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="email"
                errors={Array []}
              >
                <input
                  aria-describedby="email-label"
                  autoComplete="email"
                  className="govuk-input"
                  defaultValue=""
                  id="email"
                  name="email"
                  spellCheck="false"
                  type="text"
                />
              </FormElementWrapper>
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="password"
              >
                Create password
              </label>
              <span
                className="govuk-hint"
                id="password-hint"
              >
                Your password should be at least 8 characters long.
              </span>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="password"
                errors={Array []}
              >
                <input
                  aria-describedby="password-hint"
                  autoComplete="new-password"
                  className="govuk-input"
                  id="password"
                  name="password"
                  spellCheck="false"
                  type="password"
                />
              </FormElementWrapper>
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="confirm-password"
                id="confirm-password-label"
              >
                Confirm your password
              </label>
              <input
                aria-describedby="confirm-password-label"
                autoComplete="new-password"
                className="govuk-input"
                id="confirm-password"
                name="confirmPassword"
                spellCheck="false"
                type="password"
              />
            </div>
            <p
              className="govuk-body govuk-!-margin-top-5"
            >
              By using this website, you agree to the 
              <a
                className="govuk-link"
                href="https://www.gov.uk/help/privacy-notice"
              >
                Privacy
              </a>
               and 
              <a
                className="govuk-link"
                href="https://www.gov.uk/help/cookies"
              >
                Cookies
              </a>
               policies
            </p>
            <div
              className="govuk-checkboxes"
            >
              <div
                className="govuk-checkboxes__item"
              >
                <input
                  aria-describedby="checkbox-user-research-label"
                  className="govuk-checkboxes__input"
                  id="checkbox-user-research"
                  name="contactable"
                  type="checkbox"
                  value="yes"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-user-research"
                  id="checkbox-user-research-label"
                >
                  If you are willing to be contacted as part of user research, please tick this box.
                </label>
              </div>
            </div>
          </fieldset>
        </div>
        <input
          className="govuk-button"
          id="create-account-button"
          name="createAccount"
          type="submit"
          value="Create account"
        />
        <input
          name="regKey"
          type="hidden"
          value="abcdefg"
        />
      </CsrfForm>
    </div>
    <div
      className="govuk-grid-column-one-thirds"
    >
      <h2
        className="govuk-heading-m"
      >
        Already have an account?
      </h2>
      <a
        className="govuk-link"
        href="/login"
      >
        Sign in
      </a>
    </div>
  </div>
</Component>
`;

exports[`pages register should render errors correctly 1`] = `
<Component
  description="Register page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Enter an email address in the correct format, like name@example.com",
        "id": "email",
        "userInput": "test@tfn.com",
      },
    ]
  }
  title="Register - Create Fares Data Service"
>
  <div
    className="govuk-grid-row"
  >
    <div
      className="govuk-grid-column-two-thirds"
    >
      <CsrfForm
        action="/api/register"
        csrfToken=""
        method="post"
      >
        <ErrorSummary
          errors={
            Array [
              Object {
                "errorMessage": "Enter an email address in the correct format, like name@example.com",
                "id": "email",
                "userInput": "test@tfn.com",
              },
            ]
          }
        />
        <div
          className="govuk-form-group govuk-form-group--error"
        >
          <fieldset
            aria-describedby="register-page-heading"
            className="govuk-fieldset"
          >
            <legend
              className="govuk-fieldset__legend govuk-fieldset__legend--l"
            >
              <h1
                className="govuk-fieldset__heading"
                id="register-page-heading"
              >
                Create an account
              </h1>
            </legend>
            <p
              className="govuk-hint hint-text"
            >
              Enter your details to create an account
            </p>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="email"
                id="email-label"
              >
                Enter email address
              </label>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="email"
                errors={
                  Array [
                    Object {
                      "errorMessage": "Enter an email address in the correct format, like name@example.com",
                      "id": "email",
                      "userInput": "test@tfn.com",
                    },
                  ]
                }
              >
                <input
                  aria-describedby="email-label"
                  autoComplete="email"
                  className="govuk-input"
                  defaultValue="test@tfn.com"
                  id="email"
                  name="email"
                  spellCheck="false"
                  type="text"
                />
              </FormElementWrapper>
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="password"
              >
                Create password
              </label>
              <span
                className="govuk-hint"
                id="password-hint"
              >
                Your password should be at least 8 characters long.
              </span>
              <FormElementWrapper
                errorClass="govuk-input--error"
                errorId="password"
                errors={
                  Array [
                    Object {
                      "errorMessage": "Enter an email address in the correct format, like name@example.com",
                      "id": "email",
                      "userInput": "test@tfn.com",
                    },
                  ]
                }
              >
                <input
                  aria-describedby="password-hint"
                  autoComplete="new-password"
                  className="govuk-input"
                  id="password"
                  name="password"
                  spellCheck="false"
                  type="password"
                />
              </FormElementWrapper>
            </div>
            <div
              className="govuk-form-group"
            >
              <label
                className="govuk-label"
                htmlFor="confirm-password"
                id="confirm-password-label"
              >
                Confirm your password
              </label>
              <input
                aria-describedby="confirm-password-label"
                autoComplete="new-password"
                className="govuk-input"
                id="confirm-password"
                name="confirmPassword"
                spellCheck="false"
                type="password"
              />
            </div>
            <p
              className="govuk-body govuk-!-margin-top-5"
            >
              By using this website, you agree to the 
              <a
                className="govuk-link"
                href="https://www.gov.uk/help/privacy-notice"
              >
                Privacy
              </a>
               and 
              <a
                className="govuk-link"
                href="https://www.gov.uk/help/cookies"
              >
                Cookies
              </a>
               policies
            </p>
            <div
              className="govuk-checkboxes"
            >
              <div
                className="govuk-checkboxes__item"
              >
                <input
                  aria-describedby="checkbox-user-research-label"
                  className="govuk-checkboxes__input"
                  id="checkbox-user-research"
                  name="contactable"
                  type="checkbox"
                  value="yes"
                />
                <label
                  className="govuk-label govuk-checkboxes__label"
                  htmlFor="checkbox-user-research"
                  id="checkbox-user-research-label"
                >
                  If you are willing to be contacted as part of user research, please tick this box.
                </label>
              </div>
            </div>
          </fieldset>
        </div>
        <input
          className="govuk-button"
          id="create-account-button"
          name="createAccount"
          type="submit"
          value="Create account"
        />
        <input
          name="regKey"
          type="hidden"
          value="abcdefg"
        />
      </CsrfForm>
    </div>
    <div
      className="govuk-grid-column-one-thirds"
    >
      <h2
        className="govuk-heading-m"
      >
        Already have an account?
      </h2>
      <a
        className="govuk-link"
        href="/login"
      >
        Sign in
      </a>
    </div>
  </div>
</Component>
`;
